# horizon-code

./: .gitignore  AGENTS.md  API.md  FULL_SYSTEM_SPECIFICATION.md  REVISION_BRANCH_CHANGES.md  code-conventions.md  conda.yaml  create_env.sh  demo_scenario.txt  download_models.sh  generate_instructions.py  handoff.md  install_llama_cpp.sh  model_config.yaml  new_design.txt  prompts.yaml  pyproject.toml  requirements.txt  results_deepseek_loose.json  results_deepseek_strict.json  results_granite_loose.json  results_granite_strict.json  results_llama_loose.json  results_qwen_loose.json  results_qwen_strict.json  results_stable_loose.json  setup_env.py  test.py  test_cases.json  test_history.db  test_history.db-shm  test_history.db-wal  test_script.py
.github/workflows/: ci.yml
app/: main.py
app/modules/: agent_service.py  connection_manager.py  context_manager.py  orchestrator.py  validator.py  websocket_manager.py
app/utils/: ast_matcher.py  formatters.py  halstead.py  paths.py  performance.py  (+3 more)
benchmark/: Horizon_Benchmark_Report.docx  benchmark.py  csr_ber.py  generate_report.js
docs/: api.md  session-summary-2025-05-25.md
tests/: conftest.py  pytest.ini  test_connection_manager.py  test_context_manager.py  test_formatters.py  test_generator_new.py  test_integration.py  test_no_judge_pipeline.py  test_orchestrator_flow.py  test_orchestrator_halt.py  test_orchestrator_halt_main.py  test_planner_output.py  test_response_parser.py  test_sequential_phase.py  test_types.py  test_validator_new.py  verify_orchestration_halt.py  verify_performance_tracking.py
(+153 files in other folders)
